# merbots_pc_object_detection

./: CMakeLists.txt  package.xml
include/: object_detection.h  object_detection_nodelet.h
launch/: merbots_pc_object_detection.launch  stereo_cirst.launch  stereo_merbots_pc_object_detection.launch
src/: object_detection.cpp  object_detection_node.cpp  object_detection_nodelet.cpp
targets/: test2.pcd
