<?xml version="1.0"?>
<package>
  <name>merbots_pc_object_detection</name>
  <version>0.0.1</version>
  <description>point cloud object detection by a input target,  maintained by the Systems, Robotics and Vision group of the 
University of the Balearic Islands, Spain. http://srv.uib.es</description>

 
  <license>GPL</license>
  <author email="joanpep.company@uib.es">Joan Pep Company</author>
  <maintainer email="joanpep.company@uib.es">Joan Pep Company</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>

   <export>
   </export>
</package>
